# spot_bt_ros

./: .gitignore  .pylintrc  CHANGELOG.md  NOTICE  README.md  SECURITY.md  package.xml  setup.cfg  setup.py
docker/: Dockerfile  bash.bashrc  compose.yml  entrypoint.sh  tmux.conf
launch/: demo.launch.py
scripts/: demo_arm.py  demo_fiducial.py  demo_pose.py
spot_bt_ros/: CMakeLists.txt  README.md  cameras.py  data.py  node.py  package.xml  transform.py  utils.py
spot_bt_ros/behaviors/actions/: template.py
spot_bt_ros/behaviors/actions/arm/: __init__.py  base.py  gripper.py  trajectory.py
spot_bt_ros/behaviors/actions/general/: __init__.py  docking.py  power.py  state.py
spot_bt_ros/behaviors/actions/movement/: __init__.py  move.py  pose.py
spot_bt_ros/behaviors/actions/perception/: __init__.py  classifier.py  depth.py  fiducial.py  graph.py  image.py  objects.py
spot_bt_ros/behaviors/conditions/perception/: __init__.py  fiducial.py  graph.py
spot_bt_ros/composites/: parallel.py  selector.py  sequence.py
spot_bt_ros_bringup/: CMakeLists.txt  README.md  package.xml
spot_bt_ros_bringup/launch/: controller.launch.py  demo.launch.py  planner.launch.py
spot_bt_ros_cpp/: CMakeLists.txt  package.xml
spot_bt_ros_cpp/include/spot_bt_ros_cpp/actions/arm/: arm_carry.hpp  arm_freeze.hpp  arm_stow.hpp  arm_unstow.hpp  gripper_close.hpp  gripper_open.hpp
spot_bt_ros_cpp/include/spot_bt_ros_cpp/actions/general/: claim_lease.hpp  dock.hpp  estop_gentle.hpp  estop_hard.hpp  estop_release.hpp  power_off.hpp  power_on.hpp  release_lease.hpp  self_right.hpp  spin.hpp  stop.hpp  undock.hpp  wait.hpp
spot_bt_ros_cpp/include/spot_bt_ros_cpp/actions/movement/: crouch.hpp  move_to_target.hpp  sit.hpp  stand.hpp
spot_bt_ros_cpp/include/spot_bt_ros_cpp/actions/perception/: detect_fiducial_markers.hpp  detect_world_objects.hpp
spot_bt_ros_cpp/include/spot_bt_ros_cpp/actions/planner/: compute_new_waypoint.hpp  compute_path_to_fiducial.hpp  compute_path_to_pose.hpp
spot_bt_ros_cpp/src/actions/arm/: arm_carry.cpp  arm_freeze.cpp  arm_stow.cpp  arm_unstow.cpp  gripper_close.cpp  gripper_open.cpp
spot_bt_ros_cpp/src/actions/general/: claim_lease.cpp  dock.cpp  estop_gentle.cpp  estop_hard.cpp  estop_release.cpp  power_off.cpp  power_on.cpp  release_lease.cpp  self_right.cpp  spin.cpp  stop.cpp  undock.cpp  wait.cpp
spot_bt_ros_cpp/src/actions/movement/: crouch.cpp  move_to_target.cpp  rollover.cpp  sit.cpp  stand.cpp
spot_bt_ros_cpp/src/actions/perception/: detect_fiducial_markers.cpp  detect_world_objects.cpp
spot_bt_ros_cpp/src/actions/planner/: compute_new_waypoint.cpp  compute_path_to_fiducial.cpp  compute_path_to_pose.cpp
spot_bt_ros_msgs/: CMakeLists.txt  README.md  package.xml
spot_bt_ros_msgs/action/: PlanSpotArmTask.action  SpotBodyTask.action  SpotPerceptionTask.action
spot_bt_ros_msgs/msg/: SpotState.msg
spot_bt_ros_node/: README.md  package.xml  setup.cfg  setup.py
spot_bt_ros_node/spot_bt_ros_node/: arm.py  body.py  cameras.py  controller.py  data.py  perception.py  transform.py  utils.py
spot_bt_ros_node/spot_bt_ros_node/planner/: simple.py
spot_bt_ros_py/: README.md  package.xml  setup.cfg  setup.py
spot_bt_ros_py/scripts/: demo_arm.py  demo_fiducial.py  demo_fiducial_arm.py  demo_search.py
spot_bt_ros_py/spot_bt_ros_py/: data.py  tick.py  utils.py
spot_bt_ros_py/spot_bt_ros_py/actions/: template.py
spot_bt_ros_py/spot_bt_ros_py/actions/arm/: __init__.py  base.py  gripper.py  planner.py  trajectory.py
spot_bt_ros_py/spot_bt_ros_py/actions/general/: __init__.py  docking.py  fallback.py  power.py  safety.py  state.py
spot_bt_ros_py/spot_bt_ros_py/actions/movement/: __init__.py  move.py  planner.py  pose.py  search.py
spot_bt_ros_py/spot_bt_ros_py/actions/perception/: __init__.py  depth.py  fiducial.py  graph.py  image.py  objects.py
spot_bt_ros_py/spot_bt_ros_py/behaviors/: general.py
spot_bt_ros_py/spot_bt_ros_py/composites/: parallel.py  selector.py  sequence.py
spot_bt_ros_py/spot_bt_ros_py/conditions/arm/: __init__.py  general.py  gripper.py
spot_bt_ros_py/spot_bt_ros_py/conditions/general/: __init__.py  docking.py  goal.py  power.py  state.py
spot_bt_ros_py/spot_bt_ros_py/conditions/movement/: __init__.py  pose.py
spot_bt_ros_py/spot_bt_ros_py/conditions/perception/: __init__.py  fiducial.py  graph.py
