<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>spot_bt_ros_cpp</name>
  <version>0.0.0</version>
  <description>Behavior Tree ROS 2 C++ package for the Boston Dynamics' Spot robot.</description>
  <maintainer email="zmkakis@sandia.gov">Zahi Kakish</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>behaviortree_ros2</depend>
  <depend>std_srvs</depend>
  <depend>spot_msgs</depend>
  <depend>btcpp_ros2_interfaces</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
