<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>spot_bt_ros_py</name>
  <version>0.1.0</version>
  <description>Behavior Tree ROS 2 Python package for the Boston Dynamics' Spot robot.</description>
  <maintainer email="zmkakis@sandia.gov">Zahi Kakish</maintainer>
  <license>MIT</license>

  <exec_depend>bosdyn</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>py_trees</exec_depend>
  <exec_depend>py_trees_ros</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>spot_driver</exec_depend>
  <exec_depend>spot_msgs</exec_depend>
  <exec_depend>spot_wrapper</exec_depend>
  <exec_depend>synchros2</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
